--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <html>
   <head>
     <title>Jansheski</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
       body {
-        text-align: center;;
+        text-align: center;
       }
       img {
         margin: 0 auto;
-        width: 300px;
-        max-width: 100%;
+        width: 100%;
+        max-width: 600px;
       }
     </style>
   </head>
   <body>
-    <img src="dog.png" alt="Dog">
+    <img src="dog.png" alt="Dog" title="Woof">
   </body>
 </html>
